# agent-swarm-hub

./: .env.local.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: env.example  escalation.example.yaml  routing.example.yaml
docs/: ARCHITECTURE.md  README.md  channel-runners.md  codex-execution.md  dashboard-design.md  integration-roadmap.md  lark-long-connection.md  lark-mapping.md  personal-usage.md  project-entry.md  remote-shell.md  remote-tmux-bridge.md  subagent-policy.md  superpowers-integration.md  swarm-architecture.md  telegram-mapping.md  worker-flow.md  实现手册.md  开发日志.md  操作手册.md
scripts/: ash-where  bootstrap.sh  build-openviking-memory-bundle.py  build-openviking-project-brain.py  build-openviking-project-tree.py  install-local-skill.sh  install_superpowers.sh  start-chat.sh  start-lark.sh  start-local.sh  start-openviking.sh  start-swarm.sh  start-telegram.sh  sync-openviking-projects.py  test-core.sh
skills/ash-workbench/: SKILL.md
skills/automation-runtime/: SKILL.md
src/agent_swarm_hub/: __init__.py  adapter.py  auto_continue.py  cli.py  (+31 more)
tests/: test_cli.py  test_config.py  test_dashboard.py  test_env_loader.py  test_executor.py  test_harness_architecture.py  test_lark.py  test_lark_service.py  test_lark_ws_runner.py  test_live_followup.py  test_openviking_support.py  test_remote_adapter.py  test_runner.py  test_runtime_cleanup.py  test_runtime_monitor.py  test_session_store_path.py  test_swarm.py  test_swarm_launch.py  test_telegram.py  test_telegram_markdown_safety.py  test_telegram_polling.py  test_telegram_service.py
(+4 files in other folders)
