[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-swarm-hub"
version = "0.1.0"
description = "Project-centric entry layer for native Claude/Codex sessions, memory, remote chat, and swarm workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agent-swarm-hub = "agent_swarm_hub.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
